--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
 
 }
